@@ -1,5 +1,10 @@
 ChangeLog for 2.53.1
 
+//Beta 48
+Fixed a memory leak when compiling scripts and exiting out of
+	the assign scripts dialogue with Cancel.
+	( ZoriaRPG, 16th May, 2020 )
+
 //Beta 47 
 Added sanity guard to inline bool get_item(int id).
 	( ZoriaRPG, 12th May, 2020 )
